tools/tests/errors/surf_lib_17.ki
# fromhex of an odd-length hex string must raise.
discard fromhex("abc")
